# gateway-relay-poc

./: .dockerignore  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  analyze.md  analyze_ja.md  code-review-report.md  gateway-config.json5  gateway.md  poc.md  poc_ja.md  producer_sim.py  refactor-notes.md  router.json5  topics.txt
plans/: k8s-perf-test-plan.md
src/: cluster.rs  config.rs  consumer_perf.rs  consumer_sim.rs  discovery.rs  event_handlers.rs  forwarding.rs  hashing.rs  interest.rs  lib.rs  main.rs  metrics.rs  producer_perf.rs  producer_sim.rs  subscription.rs
