[package]
name = "zenoh-gateway-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
zenoh = "1.8.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sha2 = "0.11.0"
ctrlc = "3.4"

[[bin]]
name = "gateway"
path = "src/main.rs"

[[bin]]
name = "consumer-sim"
path = "src/consumer_sim.rs"